# envolventecte

./: .eslintrc.js  .gitignore  LICENSE.txt  README.md  TODO.txt  asset-manifest.json  config-overrides.js  index.html  package-lock.json  package.json  precache-manifest.0661176826e3770e09e0cba65ccf9fc4.js  precache-manifest.114d84de0316cdea2120248891f93719.js  precache-manifest.1270187549c6d1c48751bbc2b16c7315.js  precache-manifest.1a264dd9e018cc4ff9af6642fac96b2c.js  precache-manifest.1e548ef7cd9759af212cc1839e975e20.js  precache-manifest.20cb80d2ecb78f92f7d990cbe61dfced.js  precache-manifest.28a7681494b870ccaf360c42640a6df7.js  precache-manifest.2dd06b76c2ffbc484a3980f3d007ee46.js  precache-manifest.4cdff88711529306d4400ca6d9cd431e.js  precache-manifest.52e9feb527fe7e37ba78f1f9cd8bb36f.js  precache-manifest.5356f403adbdce7b1bc487af80610555.js  precache-manifest.5558f9fa0a7c277d66f3080e55ece920.js  precache-manifest.63ab349412979e2847acc048cb2f80c0.js  precache-manifest.6bc2c5961254250f9e7861245da65d5d.js  precache-manifest.6d0615f21a5054be8e741c86c1916293.js  precache-manifest.6d5ccd0a1a83db6705efa7483fb829b4.js  precache-manifest.6dcd4cdf78df3acbb971aeb613cf0a63.js  precache-manifest.740013da1d50b21b1c9604aa6c516dfd.js  precache-manifest.776e6de5d9e51076f1d7145ca8ede5d1.js  precache-manifest.7be0f0def54f71a03328540268823fbd.js  precache-manifest.7c7d6131ab82d23c569ac8f83c8389be.js  precache-manifest.823268cd18762bc34bdff6d6496cde8d.js  precache-manifest.9599f927494d170976f76df95f654035.js  precache-manifest.989a79edbc7339c953c3ee17ce836de8.js  precache-manifest.9f0e46f878a99a84ff4905af8b1b6704.js  precache-manifest.9f77b6d0146589f2eb9f02d878c53f55.js  precache-manifest.9fb0627842265f3fab120c3681eac22d.js  precache-manifest.a9d1d53c3a23a7617d60cec2dc8c4e16.js  precache-manifest.ad09eceb647cd6d6cf28023b2ee9d862.js  precache-manifest.c4b15b5494e021e57efd98c2f5ee212a.js  (+17 more)
climas/: leeme.txt  zonaA3c.met  zonaAlfa1c.met  zonaAlfa3c.met  zonaAlfa4c.met  zonaB1c.met  zonaB2c.met  zonaB4.met  zonaB4c.met  zonaC1c.met  zonaC2.met  zonaC4.met  zonaC4c.met  zonaD1c.met  zonaD2.met  zonaE1.met  zonaE1c.met
data/: zcraddata.json
public/: index.html
public/climas/: zonaA1c.met  zonaA2c.met  zonaA3.met  zonaA4.met  zonaA4c.met  zonaAlfa2c.met  zonaB3.met  zonaB3c.met  zonaC1.met  zonaC2c.met  (+5 more)
src/: Makefile  aux.js  computezcdata.js  elements.js  index.css  index.js  index.jsx  main.js  main.jsx  utils.js  zcraddata.json
wasm/: Cargo.toml
wasm/src/: lib.rs
(+723 files in other folders)
