[package]
name = "wasm-envolventecte"
description = "Wasm bindings for envolventecte"
version = "22.5.0"
authors = ["Rafael Villar Burke <pachi@ietcc.csic.es>"]
edition = "2018"
repository = "https://github.com/pachi/hulc2envolventecte"
license = "Apache-2.0 OR MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features=["derive"] }
bemodel = { version="22.5.0", path = "../../cteenergymodel/bemodel" }
hulc = { version="22.5.0", path = "../../cteenergymodel/hulc" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# Log to console from rust. Use (activate) feature with wasm-pack build -- --features console_log
log = "0.4"
console_log = { version = "0.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
